frontend/test/should_fail/exectype_SetmapAdd6.grg
using exectype;

rule r
{
	modify  {
		exec(u:map<int,string> =map<int,string> && v:A=varia && w:HH=vario && {u.add(v,w)});
	}
}